# uwin

./: .bazelignore  .bazelrc  .gdbinit  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  WORKSPACE  conanfile.py
core-abi/: Cargo.toml
core-abi/src/: callback_token.rs  context.rs  lib.rs  stdcall.rs  stdcall_fn_ptr.rs  unwind_token.rs
core-fs/: Cargo.toml
core-fs/src/: error.rs  lib.rs  path.rs
core-gfx/: Cargo.toml
core-gfx/src/: lib.rs
core-heap/: Cargo.toml
core-heap/src/: lib.rs
core-memmap/: Cargo.toml
core-memmap/src/: address_range.rs  align.rs  lib.rs  manager.rs  mapper.rs  page_region_state.rs  page_state.rs
core-memmap/src/os/: unix.rs
core-memmgr/: Cargo.toml
core-memmgr/src/: address_range.rs  align.rs  lib.rs  manager.rs  mapper.rs  page_region_state.rs  page_state.rs  region_holder.rs
core-memmgr/src/os/: mod.rs  windows.rs
core-message-queue/: Cargo.toml
core-message-queue/src/: lib.rs
core-windows/: Cargo.toml
core-windows/src/: lib.rs
ext-deps/icu/: CMakeLists.txt  uconfig_local.h
msvc-builder/: Cargo.toml  README.md
msvc-builder/src/: VC98.txt  ar.rs  comp_dag.rs  fixups.rs  main.rs  msvc.rs  reproducible.rs  wine.rs
recompiler/: Cargo.toml  README.md
recompiler/src/: com_stubs.rs  com_stubs_params.rs  dll_exports.rs  error.rs  lib.rs  lifter.rs  loader.rs  main.rs  pe_file.rs  recompile.rs  stubs.rs  stubs_list.rs  thunk_id_allocator.rs
recomputil/: Cargo.toml
recomputil/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
rusty-x86/: Cargo.toml
rusty-x86/src/: backend.rs  disasm.rs  lib.rs  llvm.rs  memory_image.rs  types.rs
rusty-x86/src/codegen/: arithmetic.rs  bit_magic.rs  bitwise.rs  conditional.rs  control_flow.rs  convert.rs  flags.rs  mod.rs  mov.rs  shifts.rs  stack.rs  string.rs  trapping.rs  x87.rs
rusty-x86/src/interp/: backend.rs  mod.rs
rusty-x86/src/llvm/: backend.rs  mod.rs  split_module_builder.rs
rusty-x86/src/llvm/backend/: intrinsics.rs  mod.rs  prologue_builder.rs  runtime_helpers.rs  types.rs
rusty-x86/tests/: asmfilt-ida.py  e2e_against_unicorn.rs
rusty-x86/tests/common/: loader.rs  mod.rs
rusty-x86/tests/funs/: fib.rs  mod.rs  msvc.rs  sort.rs
rusty-x86/tests/funs/msvc_objs/: vc98.sh
rusty-x86/tests/instr/: mod.rs
rusty-x86/tests/qemu/: mod.rs
rusty-x86/tests/qemu/qemu-x86-tests/: README.md  build.sh  printf.c  printf_config.h  test-i386  test-i386-linux  test-i386-shift.h  test-i386.c  the_libc.c  the_libc.h
rusty_x86_runtime/: .gitattributes  Cargo.toml  README.md
rusty_x86_runtime/src/: callback_token.rs  interp.rs  lib.rs  magic.rs  thunk_helper.rs  thunks.rs
test/unit/: CMakeLists.txt  HandleTable.cpp  Heap.cpp  MemRegion.cpp  Modules.cpp  PagesRegion.cpp  String.cpp  TargetMemMgr.cpp  Win32Error.cpp  remill_stubs.cpp
test_fixture/: Cargo.toml  build.rs
test_fixture/src/: impl.rs  main.rs
test_fixture_recomp/: Cargo.toml  build.rs
uwin/: CMakeLists.txt  main.cpp
uwin/ctx/: codepages.h  dll.h  env.h  env_param.h  ldr.h  process.h  process_heap.h  thread.h
uwin/heap/: CMakeLists.txt  block.h  block_hdr.h  consts.h  heap.cpp  heap.h  span.cpp  span.h  span_group.cpp  span_group.h  span_hdr.h
uwin/ht/: CMakeLists.txt  except.h  handle.h  handle_holder.h  handlelike_allocator.cpp  handlelike_allocator.h  handletable.cpp  handletable.h  kobj.cpp  kobj.h  kobjref.h
uwin/log/: CMakeLists.txt  log.cpp  log.h
uwin/mem/: CMakeLists.txt  asan.h  base_mem_mapper.h  except.h  mem_mapper.h  mem_region.h  tptr.h
uwin/mem/mgr/: CMakeLists.txt  consts.h  pages_region.cpp  pages_region.h  pages_regions_container.cpp  pages_regions_container.h  query_results.h  region_holder.cpp  region_holder.h  target_mem_mgr.cpp  target_mem_mgr.h  tprot.h
uwin/mem/posix/: CMakeLists.txt  posix_mem_mapper.cpp  posix_mem_mapper.h
uwin/posix/: CMakeLists.txt  except.cpp  except.h
uwin/str/: CMakeLists.txt  str.h  uconv.cpp  uconv.h  uconv_internal.h
uwin/util/: CMakeLists.txt  align.h  endian.h  enumu.h  except.cpp  except.h  file.h  nocopy.h  nomove.h  span.h  str.h  visit.h
uwin/win32/: CMakeLists.txt  error.cpp  error.h  error_code.h  error_code_generated.cpp.mako  error_code_generated.h.mako  gen_error_codes.py  scrape_win32_errors.py  uconv.h  winerror.py
uwin/win32/dll/: CMakeLists.txt  base.cpp  base.h  dispatcher.h  native_module.cpp  native_module.h  stub_exception.cpp  stub_exception.h  vararg_ctx.h
uwin/win32/dll/DDRAW/: impl.cpp  impl.h
uwin/win32/dll/KERNEL32/: heap.cpp  impl.cpp  impl.h  locale.cpp  nls.cpp  (+1 more)
uwin/win32/kobj/: CMakeLists.txt  closable.h  console.cpp  console.h  event.cpp  event.h
uwin/win32/ldr/: CMakeLists.txt  except.h  ldr.cpp  ldr.h  linkable.h  microsoft_pe.cpp  microsoft_pe.h  module.cpp  module.h  module_loader.cpp  module_loader.h  module_table.cpp  module_table.h  pe_format_except.h  pe_image.cpp  pe_image.h  target_module.cpp  target_module.h
uwin/win32/nls/: gen_nls.py
uwin/win32/svc/: CMakeLists.txt  README.md  basic_mbox.cpp  basic_mbox.h  basic_stdio.cpp  basic_stdio.h  dummy_locale.cpp  dummy_locale.h  locale.h  mbox.h  stdio.h
uwin/win32/types/: cursor.h  hmodule.h  icon.h  menu.h  types.h  wnd.h
uwin/xcute/: CMakeLists.txt  except.h
uwin/xcute/remill/: CMakeLists.txt  remill_rt.cpp  remill_rt.h  remill_state.h
win32-atoms/: Cargo.toml
win32-atoms/src/: lib.rs
win32-ddraw/: Cargo.toml
win32-ddraw/src/: lib.rs
win32-error/: Cargo.toml  build.rs
win32-error/src/: lib.rs  winerror.csv
win32-fs/: Cargo.toml
win32-fs/src/: lib.rs
win32-impl/: Cargo.toml
win32-impl/src/: lib.rs
win32-impl/src/Win32/: Console.rs  DirectDraw.rs  Environment.rs  FileSystem.rs  Foundation.rs  Gdi.rs  Globalization.rs  LibraryLoader.rs  Memory.rs  SystemInformation.rs  Threading.rs  Time.rs  WindowsAndMessaging.rs  WindowsProgramming.rs  mod.rs
win32-io/: Cargo.toml
win32-io/src/: lib.rs
win32-kobj/: Cargo.toml
win32-kobj/src/: lib.rs
win32-message-queue/: Cargo.toml
win32-message-queue/src/: lib.rs
win32-windows/: Cargo.toml
win32-windows/src/: lib.rs
(+323 files in other folders)
