
[profile.release]
opt-level = 3
debug = true
lto = "thin"

[workspace]
members = [
    "rusty-x86",
    "rusty-x86_derive",
    "win32-mem",
    "win32",

    "win32-bindgen/bindgen",
    "win32-bindgen/bindgenlib",
    "win32-bindgen/metadata",
    "win32-bindgen/tokens",

    "runtime",
    "recompiler",
    "recomputil",
    "memory-image",
]