[profile.release]
opt-level = 3
debug = true
lto = "thin"

[workspace]
resolver = "2"
members = [
    "rusty-x86",
    "rusty-x86_derive",

    "core-mem",
    "core-memmgr",
    "core-heap",
    "core-abi",
    "core-str",
    "core-console",
    "core-handletable",
    "core-message-queue",
    "core-windows",
    "core-gfx",
    "core-fs",

    "win32",
    "win32-impl",
    "win32-heapmgr",
    "win32-virtmem",
    "win32-module-table",
    "win32-kobj",
    "win32-io",
    "win32-wobj",
    "win32-atoms",
    "win32-windows",
    "win32-message-queue",
    "win32-ddraw",
    "win32-fs",

    "win32-bindgen/bindgen",
    "win32-bindgen/bindgenlib",
    "win32-bindgen/metadata",
    "win32-bindgen/tokens",

    "test_fixture",
    "rusty_x86_runtime",
    "recompiler",
    "recomputil",
    "memory-image",

    "msvc-builder",
]
