[package]
name = "core-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }
rusty-x86 = { path = "../rusty-x86", optional = true }

static_assertions = "1.1.0"
log = "0.4.16"
