[package]
name = "core-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.3"
unicase = "2.6.0"
thiserror = "1.0.31"
anyhow = "1.0.57"

num-derive = "0.3"
num-traits = "0.2.15"
num = "0.4.0"

[dev-dependencies]
tempfile = "3.3.0"
cool_asserts = "2.0.3"