[package]
name = "core-gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }
core-heap = { path = "../core-heap" }
core-windows = { path = "../core-windows" }

pixels = "0.9.0"