[package]
name = "core-heap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }
core-memmgr = { path = "../core-memmgr" }

btreemultimap = { version = "0.1.0", default-features = false }
derive_more = "0.99.17"
thiserror = "1.0.30"
