[package]
name = "core-memmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-image = { path = "../memory-image" }
core-mem = { path = "../core-mem" }

bitflags = "1.3.2"
thiserror = "1.0.30"

[target.'cfg(unix)'.dependencies]
libc = "0.2.124"