[package]
name = "core-message-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }

crossbeam-channel = "0.5.4"

# used for WindowId
# maybe there is a better way to abstract this away...
winit = "0.28.3"
