[package]
name = "core-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }
core-message-queue = { path = "../core-message-queue" }

tracing = "0.1.34"
crossbeam-channel = "0.5.4"
winit = "0.26.1"