[package]
name = "msvc-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
base16ct = { version = "0.1.1", features = ["std"] }
checked_command = "0.2.4"
command-group = "1.0.8"
diff-struct = "0.4.1"
env_logger = "0.9.0"
log = "0.4.16"
sha1 = "0.10.1"
tempdir = "0.3.7"
walkdir = "2.3.2"
which = "4.2.5"
winepath = "0.1.1"
path-absolutize = "3.0.12"
colored = "2.0.0"
object = "0.28.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
regex = "1.5.5"
lazy_static = "1.4.0"
