[package]
name = "recompiler"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
object = { version = "0.28.3", features = ["write"] }
clap = { version = "3.1.7", features = ["derive"] }
memmap2 = "0.5.3"
num = "0.4.0"

rusty-x86 = { path = "../rusty-x86" }
memory-image = { path = "../memory-image" }
itertools = "0.10.3"
lazy_static = "1.4.0"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell.git"
rev = "83c81336b19b7180b55724a46656f84260203212"
features = ["llvm13-0", "target-all"]
