[package]
name = "recomputil"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
object = { version = "0.28.3", features = ["write"] }
clap = { version = "3.1.7", features = ["derive"] }
memmap2 = { version = "0.5.3", features = [ "stable_deref_trait" ] }
num = "0.4.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
yoke = "0.4.0"
thiserror = "1.0.30"
stable_deref_trait = "1.2.0"

serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_bytes = "0.11.5"
rmp-serde = "1.0.0"

recompiler = { path = "../recompiler", features = [ "mmap", "recompilation" ] }