[package]
name = "rusty-x86"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
iced-x86 = "1.15.0"
log = "0.4.14"
strum = "0.23.0"
strum_macros = "0.23.1"

rusty-x86_derive = { path = "../rusty-x86_derive" }
memory-image = { path = "../memory-image" }

# TODO: add an llvm feature gate that will disable an llvm backend
# though, need to implement any other backend first ;)
[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell.git"
rev = "83c81336b19b7180b55724a46656f84260203212"
features = ["llvm13-0", "target-all"]
optional = true

[features]
llvm = ["inkwell"]

[dev-dependencies]
test-log = "0.2.8"
unicorn = "0.9.1"
bad64 = "0.6.0"
region = "3.0.0"
env_logger = "0.9.0"
paste = "1.0.6"
static_assertions = "1.1.0"
goblin = "0.5.1"
dynasmrt = "1.2.3"
memchr = "2.4.1"
# a hack to enable llvm feature when running tests
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
rusty-x86 = { path = ".", features = ["llvm"]}

[[test]]
name = "e2e_against_unicorn"
path = "tests/e2e_against_unicorn.rs"
required-features = ["llvm"]
