[package]
name = "rusty-x86"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
iced-x86 = "1.15.0"
log = "0.4.14"
strum = "0.24.1"
strum_macros = "0.24.3"

rusty-x86_derive = { path = "../rusty-x86_derive" }
memory-image = { path = "../memory-image" }

# TODO: add an llvm feature gate that will disable an llvm backend
# though, need to implement any other backend first ;)
[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell.git"
rev = "aa370b54629b276f9d78802674eff494c96c8e50"
features = ["llvm15-0", "target-all"]
optional = true

[features]
llvm = ["inkwell"]

[dev-dependencies]
test-log = "0.2.8"
unicorn-engine = { version = "2.0.1", features = ["dynamic_linkage"] }
bad64 = "0.6.0"
region = "3.0.0"
env_logger = "0.10.0"
paste = "1.0.6"
static_assertions = "1.1.0"
goblin = "0.6.1"
dynasmrt = "2.0.0"
memchr = "2.4.1"
# a hack to enable llvm feature when running tests
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
rusty-x86 = { path = ".", features = ["llvm"]}

[[test]]
name = "e2e_against_unicorn"
path = "tests/e2e_against_unicorn.rs"
required-features = ["llvm"]
