[package]
name = "test_fixture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_x86_runtime = { path = "../rusty_x86_runtime" }
recompiler = { path = "../recompiler" }
core-mem = { path = "../core-mem" }
core-abi = { path = "../core-abi" }
win32 = { path = "../win32" }

region = "3.0.0"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[build-dependencies]
recompiler = { path = "../recompiler", features = ["recompilation", "mmap"] }
