[package]
name = "test_fixture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_x86_runtime = { path = "../rusty_x86_runtime" }
# used w/o recompilation feature to get access to some recomp-related types
recompiler = { path = "../recompiler" }

core-mem = { path = "../core-mem" }
core-memmgr = { path = "../core-memmgr" }
core-heap = { path = "../core-heap" }
core-abi = { path = "../core-abi" }
core-str = { path = "../core-str" }
core-console = { path = "../core-console" }
core-message-queue = { path = "../core-message-queue" }
core-fs = { path = "../core-fs" }
core-time = { path = "../core-time" }

win32 = { path = "../win32" }
win32-impl = { path = "../win32-impl" }
win32-heapmgr = { path = "../win32-heapmgr" }
win32-virtmem = { path = "../win32-virtmem" }
win32-module-table = { path = "../win32-module-table" }
win32-kobj = { path = "../win32-kobj" }
win32-io = { path = "../win32-io" }
win32-wobj = { path = "../win32-wobj" }
win32-windows = { path = "../win32-windows" }
win32-atoms = { path = "../win32-atoms" }
win32-message-queue = { path = "../win32-message-queue" }
win32-fs = { path = "../win32-fs" }
win32-time = { path = "../win32-time" }

tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tracy = { version = "0.8.0", features = [] }
tracy-client = { version = "0.12.7" }
encoding_rs = "0.8.31"
itertools = "0.10.3"
panic-control = "0.1.4"
arcstr = "1.1.3"

[build-dependencies]
recompiler = { path = "../recompiler", features = ["recompilation", "mmap"] }
