[package]
name = "test_fixture_recomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
num_cpus = "1.15.0"
rustflags = "0.1.3"
recompiler = { path = "../recompiler", features = ["recompilation", "mmap"] }
jobserver = "0.1.26"
rayon = { version = "1.7.0" }
