[package]
name = "win32-atoms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-handletable = { path = "../core-handletable" }
win32 = { path = "../win32" }

unicase = "2.6.0"
case_insensitive_hashmap = "1.0.0"
