[package]
name = "win32-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = "0.10.1"

[build-dependencies]
phf_codegen = "0.10.0"
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }