[package]
name = "win32-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-fs = { path = "../core-fs" }
core-handletable = { path = "../core-handletable" }

win32 = { path = "../win32" }
win32-kobj = { path = "../win32-kobj" }

arcstr = "1.1.4"
glob = "0.3.0"
tracing = "0.1.35"