[package]
name = "win32-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recompiler = { path = "../recompiler" }

core-mem = { path = "../core-mem" }
core-memmgr = { path = "../core-memmgr" }
core-heap = { path = "../core-heap" }
core-abi = { path = "../core-abi" }
core-str = { path = "../core-str" }
core-console = { path = "../core-console" }
core-message-queue = { path = "../core-message-queue" }
core-gfx = { path = "../core-gfx" }
core-windows = { path = "../core-windows" }
core-fs = { path = "../core-fs" }

win32 = { path = "../win32" }
win32-heapmgr = { path = "../win32-heapmgr" }
win32-virtmem = { path = "../win32-virtmem" }
win32-module-table = { path = "../win32-module-table" }
win32-kobj = { path = "../win32-kobj" }
win32-io = { path = "../win32-io" }
win32-wobj = { path = "../win32-wobj" }
win32-windows = { path = "../win32-windows" }
win32-atoms = { path = "../win32-atoms" }
win32-message-queue = { path = "../win32-message-queue" }
win32-ddraw = { path = "../win32-ddraw" }
win32-fs = { path = "../win32-fs" }
win32-time = { path = "../win32-time" }

encoding_rs = "0.8.31"
tracing = "0.1.34"
