[package]
name = "win32-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }
core-console = { path = "../core-console" }
win32 = { path = "../win32" }
win32-kobj = { path = "../win32-kobj" }

tracing = "0.1.34"
