[package]
name = "win32-kobj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-mem = { path = "../core-mem" }
core-console = { path = "../core-console" }
core-fs = { path = "../core-fs" }
core-handletable = { path = "../core-handletable" }
win32 = { path = "../win32" }

tracing = "0.1.34"
