[package]
name = "win32-message-queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-message-queue = { path = "../core-message-queue" }
win32 = { path = "../win32" }
win32-windows = { path = "../win32-windows" }

crossbeam-channel = "0.5.4"
