[package]
name = "win32-windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win32-atoms = { path = "../win32-atoms" }
core-handletable = { path = "../core-handletable" }
win32 = { path = "../win32" }
